--- a/assets/css/default/common.css
+++ b/assets/css/default/common.css
@@ -1,5 +1,5 @@
 body {
-    font-family:  "Nanum Gothic", -apple-system, "Noto Sans KR",  Roboto;
+    font-family:  -apple-system,"Open Sans", "Noto Sans KR", "Noto Sans";
     background-color: #1f1f1f;
     color: #ffffff;
     margin: 0;
