--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -180,7 +180,7 @@
   <div class="footer-container">
     <div class="footer-text">
         <p id="footer-disclaimer">{{ site.data.i18n[page.lang].footer_disclaimer }}</p>
-        <p><span id="footer-contact">✉️ contact : superphil722@gmail.com　💬 <a href="https://discord.gg/x3fvdQtBVg" target="_blank" style="color: #fff; text-decoration: underline;">discord.gg/x3fvdQtBVg</a>　@{{ site.data.i18n[page.lang].footer_contact_name }}</span></p>
+        <p><span id="footer-contact">✉️ contact : superphil722@gmail.com　💬 <a href="https://discord.gg/8S8pnv2MsH" target="_blank" style="color: #fff; text-decoration: underline;">discord.gg/x3fvdQtBVg</a>　@{{ site.data.i18n[page.lang].footer_contact_name }}</span></p>
         <p></p>
     </div>
     
