--- a/assets/css/default/common.css
+++ b/assets/css/default/common.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Noto+Sans+KR&display=swap');
+
 body {
     font-family:  -apple-system,"Open Sans", "Noto Sans KR", "Noto Sans";
     background-color: #1f1f1f;
