--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,9 @@
   <script async src="https://fundingchoicesmessages.google.com/i/pub-5862324369257695?ers=1"></script><script>(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
   
   
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Noto+Sans+KR&display=swap" rel="stylesheet">
+
+
   <!-- 지역별 메타태그 동적 생성 스크립트 -->
   <script src="{{ site.baseurl }}/assets/js/geo-meta.js?v={{ site.time | date: '%s' }}" defer></script>
   
