--- a/assets/css/default/common.css
+++ b/assets/css/default/common.css
@@ -1,6 +1,6 @@
 
 body {
-    font-family: "Open Sans", "Noto Sans KR", "Noto Sans";
+    font-family: "Noto Sans", "Open Sans", -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     background-color: #1f1f1f;
     color: #ffffff;
     margin: 0;
