--- a/_includes/supabase-config.html
+++ b/_includes/supabase-config.html
@@ -3,8 +3,8 @@
 
 <!-- Supabase 초기화 -->
 <script>
-  const supabaseUrl = 'https://rfzxpdcaauglcsansqop.supabase.co'
-  const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJmenhwZGNhYXVnbGNzYW5zcW9wIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDI3OTcyODQsImV4cCI6MjA1ODM3MzI4NH0.kBEy1nhAYecZlKFj0rrtU2I0lCzIPZNY2jAW6qX__zQ'
+  const supabaseUrl = 'https://ipdkvuybgxczqwwmrqsw.supabase.co'
+  const supabaseKey = 'sb_publishable_Hk_7I7kkgaAKrPLQz_sdUA_XvrKoJbI'
   
   const supabase = window.supabase.createClient(supabaseUrl, supabaseKey)
 </script> 
