--- a/assets/css/default/common.css
+++ b/assets/css/default/common.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Noto Sans', 'Apple SD Gothic Neo', "Open Sans", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
+
 
 body {
     font-family: "Noto Sans", "Open Sans", -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
