--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -88,6 +88,19 @@ Article 페이지용 동적 메타 태그 설정
             </div>
         </article>
     </div>
+
+    <div style="height: 24px;"></div>
+    
+    <div id="ad-unit-bottom" class="AD-bottom" style="text-align: center; align-items: center; display: flex; justify-content: center;"> 
+    <ins class="adsbygoogle"
+        style="display:inline-block;width:728px;height:90px"
+        data-ad-client="ca-pub-5862324369257695"
+        data-ad-slot="9244892982"></ins>
+    </div>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <div style="height: 12px;"></div>
 </div>
 
 <script>
