--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -13,7 +13,7 @@
     font-size: 32px;
     filter: drop-shadow(0px 1px rgb(0, 0, 0, 0.5)) drop-shadow(1px 0px rgb(0, 0, 0, 0.5)) drop-shadow(-1px 0px rgb(0, 0, 0, 0.5)) ;
     font-weight: 900;
-    background: linear-gradient(45deg, rgb(255, 255, 255, 0.9), rgb(255, 255, 255,0.7), rgb(255, 255, 255, 0.9));
+    background: #eeeeee;
     background-size: 200% auto;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -498,6 +498,7 @@
 @media (max-width: 480px) {
     .text-section p.mobile-description {
         font-size: 13px;
+        line-break: anywhere;
     }
     .view-more {
         font-size: 12px;
