--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -68,15 +68,16 @@ Article 페이지용 동적 메타 태그 설정
     </div>
 
 
-    
+    <div style="height: 12px;" class="AD-top"></div>
     <div id="ad-unit-top" class="AD-top" style="text-align: center; align-items: center; display: flex; justify-content: center;"> 
-        <div style="height: 12px;"></div>
+        
     <ins class="adsbygoogle"
         style="display:inline-block;width:728px;height:90px"
         data-ad-client="ca-pub-5862324369257695"
         data-ad-slot="9244892982"></ins>
-        <div style="height: 24px;"></div>
+        
     </div>
+    <div style="height: 24px;" class="AD-top"></div>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
