--- a/assets/css/cha_detail_img.css
+++ b/assets/css/cha_detail_img.css
@@ -6,7 +6,7 @@
 
 .card-style{
     position: relative;
-    z-index: 99;
+    z-index: 0;
 }
 
 /* specific attribute icons are displayed larger */
@@ -29,14 +29,27 @@
 
 .character-images img[src*="미오.webp"],
 .character-images img[src*="이치고.webp"],
-.character-images img[src*="리코·매화.webp"]{
+.character-images img[src*="리코·매화.webp"],
+.character-images img[src*="치즈코 - 암펠로스.webp"],
+.character-images img[src*="유이 YUI - 압세데우스.webp"],
+.character-images img[src*="레오 - 에리테이아.webp"]{
     scale: 1.2;
+}
+
+.character-images img[src*="하루 - 밀라디.webp"],
+.character-images img[src*="모토하 - 아르빌다.webp"],
+.character-images img[src*="카요 - 클레오도라.webp"]{
+    scale: 1.15;
 }
 
 .character-images img[src*="모토하·여름.webp"],
 .character-images img[src*="토모코·여름.webp"],
 .character-images img[src*="안.webp"],
-.character-images img[src*="세이지.webp"]{
+.character-images img[src*="세이지.webp"],
+.character-images img[src*="몽타뉴·백조 - 테르프시코레.webp"],
+.character-images img[src*="안 - 카르멘.webp"],
+.character-images img[src*="몽타뉴 - 테르프시코레.webp"],
+.character-images img[src*="세이지 - 레우코테아.webp"]{
     scale: 1.1;
 }
 
@@ -49,8 +62,8 @@
     scale: 1.05;
 }
 
-
-.character-images img[src*="미나미·여름.webp"]{
+.character-images img[src*="미나미·여름.webp"],
+.character-images img[src*="미나미·여름 - 탈리아.webp"]{
     position: relative;
     right: 20px;
     bottom: 20px;
@@ -69,6 +82,40 @@
     top: 50px;
     scale: 1.15;
 }
+
+.character-images img[src*="슌 - 만돌란.webp"]{
+    scale: 1.4;
+    position: relative;
+    bottom: 30px;
+    left: 10px;
+}
+
+.character-images img[src*="유키미 - 스틱스.webp"]{
+    scale: 1.1;
+    position: relative;
+    bottom: 10px;
+    right: 20px;
+}
+
+.character-images img[src*="키요시 - 슈케.webp"]{
+    scale: 1.15;
+    position: relative;
+    bottom: 30px;
+}
+
+.character-images img[src*="토모코 - 프로심나.webp"]{
+    scale: 1.25;
+    position: relative;
+    bottom: 30px;
+}
+
+.character-images img[src*="토시야 - 고르귀라.webp"]{
+    position: relative;
+    scale: 1.1;
+    left: 40px;
+    bottom: 40px;
+}
+
 
 .character-images img[src*="이케나미.webp"]{
     position: relative;
@@ -96,12 +143,17 @@
 }
 
 .character-images img[src*="렌.webp"],
-.character-images img[src*="카스미.webp"],
-.character-images img[src*="루우나.webp"]{
+.character-images img[src*="카스미.webp"]{
     position: relative;
     top: 10px;
     right: 60px;
     scale: 1.05;
+}
+
+.character-images img[src*="루우나.webp"]{
+    position: relative;
+    top: 10px;
+    right: 60px;
 }
 
 .character-images img[src*="렌 - 아르센.webp"]{
@@ -119,7 +171,7 @@
 
 .character-images img[src*="몽타뉴·백조.webp"]{
     position: relative;
-    top: 30px;
+    top: 0px;
     right: 40px;
     scale: 1.2;
 }
@@ -178,7 +230,6 @@
     position: relative;
     right: 40px;
     scale: 1.06;
-    top: 10px;
 }
 
 .character-images img[src*="토모코.webp"]{
@@ -186,4 +237,101 @@
     position: relative;
     left: 30px;
     bottom: 30px;
+}
+
+.character-images img[src*="이치고 - 텔크시에페이아.webp"]{
+    position: relative;
+    left: 20px;
+}
+
+.character-images img[src*="사나다 - 폴리데우케스.webp"]{
+    position: relative;
+    right: 20px;
+}
+
+.character-images img[src*="마나카 - 에우테르페.webp"]{
+    scale: 1.2;
+}
+
+.character-images img[src*="이케나미 - 기노.webp"]{
+    position: relative;
+    bottom: 30px;
+    scale: 1.05;
+}
+
+.character-images img[src*="마유미 - 피티스.webp"]{
+    position: relative;
+    right: 20px;
+    bottom: 20px;
+    scale: 0.95;
+}
+
+.character-images img[src*="리코·매화 - 치요메.webp"]{
+    position: relative;
+    left: 25px;
+    scale: 1.1;
+    bottom: 10px;
+}
+
+.character-images img[src*="카스미 - 상드리옹.webp"]{
+    position: relative;
+    right: 25px;
+    scale: 1.05;
+}
+
+
+.character-images img[src*="마사키 - 아말테이아.webp"]{
+    scale: 1.3;
+    position: relative;
+    bottom: 40px;
+}
+
+.character-images img[src*="키라 - 하르피이아.webp"]{
+    scale: 1.25;
+    position: relative;
+    bottom: 20px;
+}
+
+.character-images img[src*="아야카 - 칼리오페.webp"]{
+    position: relative;
+    right: 40px;
+    scale: 1.12;
+}
+
+.character-images img[src*="리코 - 치요메.webp"]{
+    position: relative;
+    right: 30px;
+}
+
+.character-images img[src*="유우미 - 우라니아.webp"]{
+    scale: 1.05;
+    position: relative;
+    bottom: 10px;
+    right: 30px;
+}
+
+.character-images img[src*="류지 - 캡틴 키드.webp"]{
+    scale: 1.13;
+    position: relative;
+    bottom: 30px;
+}
+
+.character-images img[src*="모르가나.webp"]{
+    position: relative;
+    bottom: 45px;
+    scale: 1.1;
+    right: 25px;
+}
+
+.character-images img[src*="야오링 - 맹파.webp"]{
+    scale: 1.12;
+    position: relative;
+    bottom: 15px;
+}
+
+.character-images img[src*="하루나 - 다에이라.webp"]{
+    scale: 1.1;
+    position: relative;
+    left: 40px;
+    bottom: 40px;
 }
