--- a/assets/css/tactic-share.css
+++ b/assets/css/tactic-share.css
@@ -36,6 +36,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: 16px;
 }
 
 .upload-btn{
