--- a/assets/css/default/common.css
+++ b/assets/css/default/common.css
@@ -124,6 +124,8 @@ body {
 
 /* 메인 컨텐츠 영역 */
 .main-wrapper {
+    position: relative; /* 이미 있음 */
+    left: 120px;    
     width: calc(100% - 240px);
     position: relative;
     margin-left: auto;
@@ -132,7 +134,6 @@ body {
     flex: 1;
     padding: 32px;
     max-width: 1200px;
-    transform: translateX(120px);
 }
 
 .header-container {
