--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -225,6 +225,8 @@
     window.addEventListener('load', () => {
       setTimeout(microNudge, 150);
       setTimeout(microNudge, 600);
+      setTimeout(microNudge, 1000);
+      setTimeout(microNudge, 1500);
     });
   })();
 </script>
