--- a/assets/css/default/common.css
+++ b/assets/css/default/common.css
@@ -136,6 +136,12 @@ body {
     max-width: 1200px;
 }
 
+@media screen and (max-width: 768px) {
+    .main-wrapper {
+        left: 0;
+    }
+}
+
 .header-container {
     padding: 0px 20px 10px 20px;
     margin: 0;
