--- a/assets/css/default/common.css
+++ b/assets/css/default/common.css
@@ -476,7 +476,7 @@ input[type="checkbox"]:hover {
 
     .logo-container {
         padding: 10px 20px;
-        margin: 0;
+        margin: 40px 0 0 0;
         width: 100%;
         box-sizing: border-box;
     }
@@ -502,7 +502,12 @@ input[type="checkbox"]:hover {
         right: 20px;
     }
     
+}
 
+@media screen and (max-width: 768px) {
+    .logo-container {
+        margin: 0;
+    }
 }
 
 
